<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ishouxian"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ibiaoqian"
            android:title="@string/biaoqian" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ixiaobiaojian"
            android:title="@string/xiaobujian" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/tools"
            android:title="@string/tools" />
    </group>

    <item android:title="交流">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ishare"
                android:title="@string/share" />
        </menu>
    </item>

</menu>
